[project]
name = "dsc190-assignment6"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "norahkerendian", email = "norahkerendian@gmail.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
dsc190-assignment6 = "dsc190_assignment6:main"

[build-system]
requires = ["uv_build>=0.11.8,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mypy>=2.0.0",
    "pytest>=9.0.3",
    "ruff>=0.15.12",
]
